CSS tweaks to prevent listbox overflowing the document

--- a/src/components/Dropdown/style.css
+++ b/src/components/Dropdown/style.css
@@ -11,12 +11,12 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  max-width: 240px;
   position: relative;
 }
 
 /* Components */
 .listbox {
+  box-sizing: border-box;
   list-style: none;
   border: 1px solid #aaa;
   border-radius: 4px;
@@ -25,6 +25,7 @@
   margin-top: 1px;
   position: absolute;
   top: 100%;
+  max-width: 100%;
 }
 
 .option {
@@ -61,6 +62,7 @@
   background-color: #fff;
   position: relative;
   text-align: left;
+  max-width: 240px;
 }
 
 .option::before,
